# sed-key

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
proptest-regressions/: opal.txt
src/: actions.rs  args.rs  bindings.rs  ioctl.rs  lib.rs  main.rs  opal.rs
tests/: test_args.rs  test_args_proptest.rs  test_cli.rs  test_hw_opal.rs  test_lib.rs  test_lib_proptest.proptest-regressions  test_lib_proptest.rs
