[package]
name = "sed-key"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Tool + library for controlling NVMe SED/OPAL lock states on Linux"
repository = "https://github.com/daveman1010221/sed-key"
homepage = "https://github.com/daveman1010221/sed-key"
documentation = "https://docs.rs/sed-key"
readme = "README.md"
keywords = ["nvme", "opal", "sed", "security"]
categories = ["command-line-utilities", "filesystem", "hardware-support"]

[dependencies]
anyhow = "1"
once_cell = "1.19"
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
  "suggestions",
] }
libc = "0.2"
nix = { version = "0.27", default-features = false, features = ["ioctl"] }
zeroize = "1"
tempfile = "3.23.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0.17"
proptest = "1.5"
tempfile = "3.23.0"

[features]
default = []
real-hardware = []
trace-opal = []

[profile.release]
panic = "abort"
